gallery img bug fixes on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -576,7 +576,6 @@ iframe {
       min-width: 100%;
       max-width: 100%;
       width: 100%;
-      height: 1160px;
       margin-left: -6px;
     }
 
@@ -585,6 +584,7 @@ iframe {
         max-width: 100%;
         width: 100%;
         object-fit: cover;
+        object-position: 0 -40px;
         height: 220px;
         max-height: 220px;
         min-height: 220px;
@@ -597,6 +597,7 @@ iframe {
         width: 100%;
         height: 220px;
         max-height: 220px;
+        min-height: 220px;
         padding-bottom: 10px;
     }
 
@@ -606,6 +607,7 @@ iframe {
         width: 100%;
         height: 220px;
         max-height: 220px;
+        min-height: 220px;
         padding-bottom: 10px;
     }
 
@@ -613,7 +615,14 @@ iframe {
         min-width: 100%;
         max-width: 100%;
         width: 100%;
+        height: 220px;
+        max-height: 220px;
+        min-height: 220px;
         padding-bottom: 10px;
+    }
+
+    .type-rectangular, .tiled-gallery-unresized {
+        height: 1170px;
     }
 
     .gridMap {
